# cpp-client

./: .clang-format  .gitignore  .travis.yml  CMakeLists.txt  ycm_extra_conf.template.py
cmake/: HunterConfig.cmake
cmake/Modules/: CodeCoverage.cmake
core/: CMakeLists.txt
core/include/uber/jaeger/: Reference.h  Span.h  SpanContext.h  TraceID.h  Tracer.h
core/include/uber/jaeger/metrics/: Counter.h  Gauge.h  InMemoryStatsReporter.h  Metric.h  Metrics.h  NullStatsReporter.h  StatsFactory.h  StatsFactoryImpl.h  StatsReporter.h  Timer.h
core/include/uber/jaeger/samplers/: ConstSampler.h  GuaranteedThroughputProbabilisticSampler.h  SamplingStatus.h
core/include/uber/jaeger/utils/: HexParsing.h  RateLimiter.h
core/src/uber/jaeger/: Constants.cpp  Reference.cpp  SpanContext.cpp  SpanContextTest.cpp  Tag.cpp  TraceID.cpp
core/src/uber/jaeger/metrics/: Gauge.cpp  InMemoryStatsReporter.cpp  Metrics.cpp  MetricsTest.cpp  StatsFactory.cpp  StatsFactoryImpl.cpp  StatsReporter.cpp
core/src/uber/jaeger/samplers/: SamplingStatus.cpp
core/src/uber/jaeger/utils/: RateLimiter.cpp
core/test/: CMakeLists.txt
include/uber/jaeger/: Constants.h  LogRecord.h  Reference.h  Tag.h  Tracer.h
include/uber/jaeger/metrics/: Counter.h  Gauge.h  Metrics.h  NullGauge.h  NullStatsFactory.h  NullStatsReporter.h  StatsFactory.h  StatsFactoryImpl.h  Timer.h
include/uber/jaeger/samplers/: AdaptiveSampler.h  ConstSampler.h  GuaranteedThroughputProbabilisticSampler.h  ProbabilisticSampler.h  RateLimitingSampler.h  RemotelyControlledSampler.h  Sampler.h  SamplerOptions.h
include/uber/jaeger/thrift_gen/: baggage_types.h  dependency_types.h  jaeger_types.h
include/uber/jaeger/utils/: HTTP.h  HexParsing.h  RateLimiter.h
scripts/: build-plugin.sh  build.sh
src/jaegertracing/: Config.h  Constants.h.in  LogRecord.cpp  LogRecord.h  Logging.cpp  Logging.h  Options.cpp  Options.h  Reference.cpp  Reference.h  Span.cpp  Span.h  SpanContext.cpp  SpanContext.h  SpanContextTest.cpp  SpanTest.cpp  Tag.cpp  Tag.h  TagTest.cpp  TraceID.cpp  TraceID.h  TraceIDTest.cpp  Tracer.cpp  Tracer.h  TracerTest.cpp  Transport.cpp  Transport.h  UDPTransport.cpp  UDPTransport.h
src/jaegertracing/baggage/: BaggageSetter.h  Restriction.cpp  Restriction.h  RestrictionManager.cpp  RestrictionManager.h  RestrictionsConfig.h
src/jaegertracing/metrics/: Counter.cpp  Counter.h  Gauge.cpp  Gauge.h  InMemoryStatsReporter.cpp  InMemoryStatsReporter.h  Metric.cpp  Metric.h  Metrics.cpp  Metrics.h  MetricsTest.cpp  NullCounter.cpp  NullCounter.h  NullGauge.cpp  NullGauge.h  NullStatsFactory.cpp  NullStatsFactory.h  NullStatsFactoryTest.cpp  NullStatsReporter.cpp  NullStatsReporter.h  NullTimer.cpp  NullTimer.h  StatsFactory.cpp  StatsFactory.h  StatsFactoryImpl.cpp  StatsFactoryImpl.h  StatsReporter.cpp  StatsReporter.h  Timer.cpp  Timer.h
src/jaegertracing/net/: IPAddress.cpp  IPAddress.h  IPAddressTest.cpp  Socket.cpp  Socket.h  SocketTest.cpp  URI.cpp  URI.h  URITest.cpp
src/jaegertracing/net/http/: Error.cpp  Error.h  Header.cpp  Header.h  HeaderTest.cpp  Method.cpp  Method.h  MethodTest.cpp  Request.cpp  Request.h  Response.cpp  Response.h  ResponseTest.cpp
src/jaegertracing/platform/: Endian.cpp  Endian.h  Hostname.h
src/jaegertracing/propagation/: Extractor.cpp  Extractor.h  HeadersConfig.cpp  HeadersConfig.h  Injector.cpp  Injector.h  Propagator.cpp  Propagator.h  PropagatorTest.cpp
src/jaegertracing/reporters/: CompositeReporter.cpp  CompositeReporter.h  Config.h  InMemoryReporter.cpp  InMemoryReporter.h  LoggingReporter.cpp  LoggingReporter.h  NullReporter.cpp  NullReporter.h  RemoteReporter.cpp  RemoteReporter.h  Reporter.cpp  Reporter.h  ReporterOptions.cpp  ReporterOptions.h  ReporterTest.cpp
src/jaegertracing/samplers/: AdaptiveSampler.cpp  AdaptiveSampler.h  Config.h  ConstSampler.cpp  ConstSampler.h  GuaranteedThroughputProbabilisticSampler.cpp  GuaranteedThroughputProbabilisticSampler.h  ProbabilisticSampler.cpp  ProbabilisticSampler.h  RateLimitingSampler.cpp  RateLimitingSampler.h  RemotelyControlledSampler.cpp  RemotelyControlledSampler.h  Sampler.cpp  Sampler.h  SamplerOptions.cpp  SamplerOptions.h  SamplerTest.cpp  SamplingStatus.cpp  SamplingStatus.h
src/jaegertracing/testutils/: MockAgent.cpp  MockAgent.h  MockAgentTest.cpp  SamplingManager.cpp  SamplingManager.h  TUDPTransport.cpp  TUDPTransport.h  TUDPTransportTest.cpp
src/jaegertracing/thrift-gen/: Agent_server.skeleton.cpp  AggregationValidator_server.skeleton.cpp  BaggageRestrictionManager_server.skeleton.cpp  CMakeLists.txt  Collector_server.skeleton.cpp  Dependency_server.skeleton.cpp  SamplingManager.cpp  SamplingManager.h  SamplingManager_server.skeleton.cpp  TracedService_server.skeleton.cpp  sampling_constants.cpp  sampling_constants.h  sampling_types.cpp  sampling_types.h  tracetest_types.cpp  tracetest_types.h
src/jaegertracing/utils/: ErrorUtil.h  HexParsing.cpp  HexParsing.h  RateLimiter.cpp  RateLimiter.h  RateLimiterTest.cpp  UDPClient.cpp  UDPClient.h  UDPClientTest.cpp
src/uber/jaeger/: Constants.h.in  LogRecord.cpp  LogRecord.h  Logging.cpp  Logging.h  Reference.h  Span.cpp  Span.h  SpanContext.h  Tag.h  TagTest.cpp  TraceID.h  TraceIDTest.cpp  Tracer.cpp  Tracer.h  Transport.cpp  Transport.h  UDPTransport.cpp  UDPTransport.h
src/uber/jaeger/baggage/: Restriction.cpp  Restriction.h  RestrictionManager.cpp  RestrictionManager.h
src/uber/jaeger/metrics/: Counter.cpp  InMemoryStatsReporter.cpp  Metric.cpp  Metric.h  Metrics.h  MetricsTest.cpp  NullCounter.cpp  NullCounter.h  NullGauge.cpp  NullStatsFactory.cpp  NullStatsFactoryTest.cpp  NullTimer.cpp  (+8 more)
thrift_gen/: Agent.h  AggregationValidator.cpp  BaggageRestrictionManager.cpp  BaggageRestrictionManager.h  Collector.cpp  Collector.h  Dependency.h  Dependency_server.skeleton.cpp  SamplingManager.h  ZipkinCollector.cpp  agent_constants.cpp  agent_types.h  aggregation_validator_types.cpp  aggregation_validator_types.h  baggage_constants.h  dependency_constants.cpp  jaeger_constants.cpp  jaeger_constants.h  jaeger_types.cpp  sampling_constants.cpp  zipkincore_types.h
(+126 files in other folders)
